[3.1.x] Fixed #32391 -- Used CSS flex properties for changelist filter.
Matched layout adjustment using flex from admin sidebar added in
d24ba1be7a53a113d19e2860c03aff9922efec24.

Filters would become squashed when viewport was
constrained or list display table became too wide.

Backport of 269a76714616fd7ad166a14113f3354bab8d9b65 from master

--- a/django/contrib/admin/static/admin/css/changelists.css
+++ b/django/contrib/admin/static/admin/css/changelists.css
@@ -128,6 +128,7 @@
 /* FILTER COLUMN */
 
 #changelist-filter {
+    flex: 0 0 240px;
     order: 1;
     width: 240px;
     background: #f8f8f8;
